[package]
name = "jsonnet-go"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[features]
serde = ["dep:serde"]
json = ["dep:serde", "dep:serde_json"]

[dependencies]
jsonnet-go-sys = "0.1.0"
serde = { version = "1.0", optional = true }
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
